2009-12-13  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/gphoto2-widget.h, libgphoto2/gphoto2-widget.c:
	  added set_ and get_ readonly for Widgets.

2009-07-30  Dan Fandrich <dan@coneharvesters.com>

	* Fixed a bunch of C89 and SUS portability issues.

2009-04-13  Marcus Meissner   <marcus@jet.franken.de>

	* gphoto2-filesys.c: Disabled LRU caching.

	* gp_file_new_from_handler(): Allow passing data in and out via
          handler functions (to allow streaming).

	* CameraFileInfoFile: removed "name" structmember and
	  GP_FILE_INFO_NAME flags.  Use direct passing in of the filename
	  to the API functions.

	* New: gp_camera_autodetect(CameraList *list, GPContext*);

	  Simple autodetection function returning all current detected cameras.

	* (TODO: not yet New: gp_camera_open (Camera *camera, const char *name, const char *port, GPContext *context);

	   Simple open function without needing to involve libgphoto2_port.
	  )
	* gp_file_set_name() and _get_name() passing in is no longer
	  needed and the API will go away.

	* New gp_file_get_name_by_type() will convert a regular filename
	  ("normal") into one depending on type (e.g. "raw_" prefix) and
	  adjusted suffix (like ".ppm" turning into ".pgm" for grayscale
	  previews).

	* gp_file_set_type() and gp_file_get_type() are gone, these
	  functions are now implicit passed via arguments to the the
	  put_file and set_file_noop() functions.

	* gp_filesystem_set_info_noop(), gp_filesystem_set_file_noop(),
	  gp_filesystem_put_file(), gp_camera_folder_put_file():

	  Added "filename" argument to pass in the filename. The one
	  from CameraFileInfoFile and CameraFile are no longer used.

	  Added "type" argument to pass in the filetype (GP_FILE_TYPE_*).

	* Adjusted to new GPPortInfo handling.

	* Rewrote gphoto2-filesys.c to be directory based (in a tree
	  structure). Change should not be visibile outside of gphoto2-filesys.c.

2008-05-18  Marcus Meissner   <marcus@jet.franken.de>
